# the_factory_bot_task

./: .dockerignore  .env.example  .env_ci  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: action.yaml
core/: settings.py  urls.py
tg_bot/: api_sender.py  handlers.py  main.py  models.py  permissions.py  urls.py  utils.py
tg_bot/management/commands/: runbot.py
tg_bot/migrations/: 0001_initial.py  0002_message.py
tg_bot/serializers/: __init__.py  message_serializer.py  token_generate_serializer.py
tg_bot/views/: __init__.py  get_generate_token.py  messages.py
users/: serializers.py  urls.py
users/migrations/: 0001_initial.py
users/serializers/: __init__.py  login.py
users/views/: __init__.py  create.py  login.py  logout.py
